samples/_failures_safe/1761338178_13d094_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a77cadb3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a77cadb3.c:161:9: error: expected expression at end of input
  161 |         tokens[token_count].value[
      |         ^~~~~~
./samples/SAFE/__tmp_a77cadb3.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a77cadb3.c:161:9: error: expected declaration or statement at end of input
